# radicle

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md
.github/workflows/: codeql-analysis.yml
include/: radicle.h
libapi/: CMakeLists.txt
libapi/include/radicle/api/: instance.h  json_validate.h
libapi/include/radicle/api/endpoints/: auth.h  endpoint.h  internal_codes.h
libapi/include/radicle/api/mail/: sendgrid.h
libapi/src/: instance.c  json_validate.c  main.c
libapi/src/endpoints/: auth.c  endpoint.c  internal_codes.c
libapi/src/mail/: sendgrid.c
libapi/tests/include/radicle/tests/api/: api_fixture.hpp
libapi/tests/src/endpoints/: auth.cpp  endpoint.cpp
libauth/: CMakeLists.txt  auth.uml.uxf  request_flow.uml.uxf
libauth/include/radicle/: auth.h
libauth/include/radicle/auth/: crypto.h  db.h  setup.h  types.h
libauth/src/: auth.c
libauth/src/auth/: crypto.c  db.c  setup.c  types.c
libauth/tests/include/radicle/tests/auth/: auth_fixture.hpp
libauth/tests/src/: auth.cpp  auth_fixture.cpp  crypto.cpp  db.cpp
libcommon/: CMakeLists.txt
libcommon/include/radicle/: print.h
libcommon/include/radicle/types/: linked_list.h  string.h  uuid.h
libcommon/src/types/: linked_list.c  string.c  uuid.c
libcommon/tests/include/radicle/tests/: radicle_fixture.hpp
libcommon/tests/src/: subhook.c  subhook_x86.c
libcommon/tests/src/types/: linked_list.cpp  string.cpp  uuid.cpp
libconfig/: CMakeLists.txt
libconfig/include/radicle/: config.h
libconfig/src/: config.c
libpgdb/: CMakeLists.txt
libpgdb/include/radicle/: pgdb.h
libpgdb/src/: pgdb.c
libpgdb/tests/include/radicle/tests/: pgdb_hooks.hpp
libpgdb/tests/src/: pgdb.cpp  pgdb_hooks.cpp
